[package]
name = "exe"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
stdout = []

[dependencies]
enigo = "0.1.3"
env_logger = "0.10.0"
nalgebra = "0.32.3"
proc_mem = {git = "https://github.com/yandhi/ProcMem.git"}
log = "0.4.20"
